[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smoothlogging"
version = "1.0.0"
description = "Easy and consistent logging to file with console output"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Sebastian Blasiak", email = "sebastian.blasiak@gmail.com"}
]
keywords = ["logging", "smoothlogging", "file-logging", "console-logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/blasebast/smoothlogging"
Repository = "https://github.com/blasebast/smoothlogging.git"
Issues = "https://github.com/blasebast/smoothlogging/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
